--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -4,8 +4,9 @@
   "description": "Microsoft Graph Toolkit React wrapper class",
   "author": "Microsoft",
   "license": "MIT",
-  "module": "dist/esm/index.js",
-  "main": "dist/esm/index.js",
+  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "types": "dist/types.d.ts",
   "files": [
     "dist",
     "src"
@@ -29,19 +30,13 @@
     "prepack": "npm run build",
     "generate": "wca analyze ../mgt/src --format json --outFile temp/web-components.json && node ./scripts/generate.js"
   },
-  "devDependencies": {
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
-    "fs-extra": "^9.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typescript": "^3.7.5",
-    "web-component-analyzer": "^1.1.6"
-  },
   "dependencies": {
     "@microsoft/mgt": "*",
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "wc-react": "^0.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
