--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "build": "npm run clean && npm run generate && tsc",
     "clean": "node ./scripts/clean.js",
-    "prepack": "npm run build",
+    "prepack": "shx rm -rf *.tgz && npm run build",
+    "postpack": "cpx *.tgz ../../artifacts",
     "generate": "wca analyze ../mgt/src --format json --outFile temp/web-components.json && node ./scripts/generate.js"
   },
   "dependencies": {
