--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt-react",
-  "version": "1.4.0-preview.1",
+  "version": "2.0.0",
   "description": "Microsoft Graph Toolkit React wrapper class",
   "author": "Microsoft",
   "license": "MIT",
