--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt",
-  "version": "1.4.0-preview.1",
+  "version": "2.0.0",
   "description": "The Microsoft Graph Toolkit",
   "keywords": [
     "microsoft graph",
