--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*"],
+  "packages": ["packages/*", "samples/react-app"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent"
