--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "samples/react-app"
   ],
   "scripts": {
     "build": "npm run prettier:check && npm run clean && lerna run build",
