--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "samples/react-app"
   ],
   "scripts": {
-    "build": "npm run prettier:check && npm run clean && lerna run build",
+    "build": "npm run prettier:check && npm run clean && lerna run build --scope @microsoft/*",
     "build:mgt": "cd ./packages/mgt && npm run build",
     "build:mgt-element": "cd ./packages/mgt-element && npm run build",
     "bundle": "cd ./packages/mgt && npm run bundle",
     "bootstrap": "lerna bootstrap --useWorkspaces",
-    "clean": "lerna run --parallel --stream clean",
+    "clean": "lerna run --parallel --stream --scope @microsoft/* clean",
     "link": "lerna link --force-local",
-    "lint": "lerna run --parallel --stream lint",
-    "pack": "shx rm -rf artifacts/*.tgz && lerna exec --stream -- npm pack",
+    "lint": "lerna run --parallel --stream --scope @microsoft/* lint",
+    "pack": "shx rm -rf artifacts/*.tgz && lerna exec --stream --scope @microsoft/* -- npm pack",
     "prepare": "lerna bootstrap --force-local",
     "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "start": "npm-run-all prettier:check watch:serve",
     "start:https": "npm-run-all prettier:check build:esm watch:serve:https",
-    "watch": "lerna run --parallel --stream build:watch",
+    "watch": "lerna run --parallel --stream --scope @microsoft/* build:watch ",
     "watch:serve": "npm-run-all --parallel watch serve",
     "watch:serve:https": "npm-run-all -parallel watch serve:https",
     "prettier:base": "prettier --parser typescript",
