--- a/samples/angular-app/package.json
+++ b/samples/angular-app/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@azure/msal-angular": "^1.0.0",
-    "@microsoft/mgt": "^1.3.3",
+    "@microsoft/mgt": "*",
+    "@microsoft/mgt-element": "*",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
