--- a/samples/vue-app/package.json
+++ b/samples/vue-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@microsoft/mgt": "0.1.1",
+    "@microsoft/mgt": "*",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0"
