--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "The Microsoft Graph Toolkit",
   "keywords": [
     "microsoft graph",
@@ -53,6 +53,23 @@
     "lit-element": "^2.3.1",
     "msal": "^1.3.2",
     "office-ui-fabric-core": "11.0.0"
+  },
+  "devDependencies": {
+    "cpx": "1.5.0",
+    "shx": "0.3.2",
+    "npm-run-all": "4.1.5",
+    "tslint": "6.1.3",
+    "@webcomponents/webcomponentsjs": "2.4.4",
+    "rollup": "^1.29.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-babel-minify": "^9.1.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.5.0",
+    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "es-dev-server": "1.57.5"
   },
   "jest-junit": {
     "suiteName": "jest tests",
