Apply suggestions from code review
Co-authored-by: Beth Pan <xupa@microsoft.com>

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
     "storybook": "start-storybook -p 6006 -s assets",
-    "storybook:dev": "npm run build:compile && npm run storybook:buildMgt && wca analyze packages --format json --outFile custom-elements.json",
+    "storybook:dev": "npm run build:compile && npm run storybook:bundle && wca analyze packages --format json --outFile custom-elements.json",
     "storybook:build": "npm run storybook:dev && build-storybook -s assets && cpx .storybook/CNAME storybook-static",
     "storybook:deploy": "npm run storybook:build && storybook-to-ghpages -e storybook-static",
-    "storybook:buildMgt": "rollup -c ./.storybook/rollup.config.js"
+    "storybook:bundle": "rollup -c ./.storybook/rollup.config.js"
   },
   "storybook-deployer": {
     "gitUsername": "@microsoft/mgt",
