--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint": "lerna run --parallel --stream --scope @microsoft/* lint",
     "pack": "shx rm -rf artifacts/*.tgz && lerna exec --stream --scope @microsoft/* -- npm pack",
     "prepare": "lerna bootstrap --force-local",
+    "sass": "lerna run sass --scope @microsoft/*",
     "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "start": "npm-run-all prettier:check watch:serve",
