fixed mgt-element exports and updated npm modules

--- a/packages/mgt-element/tsconfig.json
+++ b/packages/mgt-element/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist/es6",
     "sourceRoot": "src",
     "rootDir": "src",
     "composite": true
