--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -35,14 +35,14 @@
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx ../../node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx ../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "lint": "tslint -c ../../tslint.json 'src/**/*.ts'",
-    "prepack": "shx rm -rf *.tgz && npm run build",
     "postpack": "cpx *.tgz ../../artifacts",
     "rollup": "rollup -c",
     "sass": "gulp sass --cwd .",
     "sass:watch": "gulp watchSass --cwd .",
     "setLicense": "gulp setLicense --cwd .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "publish:next": "npm publish --tag next"
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
