--- a/packages/providers/mgt-teams-provider/package.json
+++ b/packages/providers/mgt-teams-provider/package.json
@@ -38,8 +38,8 @@
     "compile:watch": "tsc -w",
     "lint": "tslint -c ../../../tslint.json 'src/**/*.ts'",
     "setLicense": "gulp setLicense --cwd .",
-    "prepack": "shx rm -rf *.tgz && npm run build",
-    "postpack": "cpx *.tgz ../../../artifacts"
+    "postpack": "cpx *.tgz ../../../artifacts",
+    "publish:next": "npm publish --tag next"
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
