--- a/packages/mgt-element/package.json
+++ b/packages/mgt-element/package.json
@@ -20,7 +20,7 @@
     "src"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:compile",
+    "build": "npm run setVersion && npm run clean && npm run build:compile",
     "build:compile": "npm run compile",
     "build:watch": "npm run compile:watch",
     "clean": "shx rm -rf ./dist && shx rm -rf ./tsconfig.tsbuildinfo",
@@ -30,7 +30,7 @@
     "setVersion": "gulp setVersion --cwd .",
     "setLicense": "gulp setLicense --cwd .",
     "postpack": "cpx *.tgz ../../artifacts",
-    "prepack": "shx rm -rf *.tgz && npm run setVersion && npm run build"
+    "publish:next": "npm publish --tag next"
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^2.0.0",
