--- a/packages/mgt-element/package.json
+++ b/packages/mgt-element/package.json
@@ -12,9 +12,9 @@
   },
   "author": "Microsoft",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
+  "main": "./dist/es6/index.js",
+  "types": "./dist/es6/index.d.ts",
+  "module": "./dist/es6/index.js",
   "files": [
     "dist",
     "src"
@@ -32,21 +32,9 @@
     "postpack": "cpx *.tgz ../../artifacts"
   },
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^2.0.0",
+    "@microsoft/microsoft-graph-client": "^2.1.1",
     "lit-element": "^2.4.0",
-    "idb": "^5.0.6"
-  },
-  "devDependencies": {
-    "cpx": "^1.5.0",
-    "gulp": "^4.0.2",
-    "gulp-append-prepend": "^1.0.8",
-    "gulp-header-license": "^1.0.9",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-util": "^3.0.8",
-    "shx": "^0.3.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.5"
+    "idb": "^5.0.7"
   },
   "publishConfig": {
     "directory": "dist"
