Updated proxy provider samples

--- a/samples/proxy-provider-asp-net-core/appsettings.json
+++ b/samples/proxy-provider-asp-net-core/appsettings.json
@@ -6,7 +6,7 @@
     "ClientSecret": "YOUR_APP_PASSWORD_HERE", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
     "Scopes": "openid email profile offline_access",
     "GraphResourceId": "https://graph.microsoft.com/",
-    "GraphScopes": "User.Read User.ReadBasic.All Calendars.Read People.Read Contacts.Read User.Read.All Group.Read.All ChannelMessage.Read.All"
+    "GraphScopes": "User.Read User.ReadBasic.All Calendars.Read People.Read Contacts.Read User.Read.All Group.Read.All ChannelMessage.Read.All Sites.Read.All Mail.ReadBasic User.Read.All People.Read.All"
   },
   "Logging": {
     "IncludeScopes": false,
