--- a/samples/proxy-provider-asp-net-mvc/graph-tutorial/PrivateSettings.config.example
+++ b/samples/proxy-provider-asp-net-mvc/graph-tutorial/PrivateSettings.config.example
@@ -3,5 +3,5 @@
     <add key="ida:AppID" value="YOUR_APP_ID_HERE" />
     <add key="ida:AppSecret" value="YOUR_APP_PASSWORD_HERE" />
     <add key="ida:RedirectUri" value="https://localhost:44375/" />
-    <add key="ida:AppScopes" value="User.Read User.Read.All Calendars.Read People.Read People.Read.All Contacts.Read Group.ReadWrite.All" />
+    <add key="ida:AppScopes" value="User.Read User.Read.All Calendars.Read People.Read People.Read.All Contacts.Read Group.ReadWrite.All Sites.Read.All Mail.ReadBasic User.Read.All People.Read.All" />
 </appSettings>
