--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -31,7 +31,7 @@
     "generate": "wca analyze ../mgt-components/src --format json --outFile temp/web-components.json && node ./scripts/generate.js"
   },
   "dependencies": {
-    "@microsoft/mgt": "*",
+    "@microsoft/mgt-components": "*",
     "@microsoft/mgt-element": "*",
     "@microsoft/microsoft-graph-types": "^1.27.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
