--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,45 +29,39 @@ steps:
       command: custom
       verbose: false
       customCommand: 'run build'
-
   #- task: Npm@1
   #  displayName: 'npm test'
   #  inputs:
   #    command: custom
   #    verbose: false
   #    customCommand: test
-
-  - task: PublishTestResults@2
-    displayName: 'Publish Test Results testResults/junit.xml'
-    inputs:
-      testResultsFiles: testResults/junit.xml
-    condition: succeededOrFailed()
-
-  - task: PublishCodeCoverageResults@1
-    displayName: 'Publish code coverage from $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
-    inputs:
-      codeCoverageTool: Cobertura
-      summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
-      reportDirectory: '$(System.DefaultWorkingDirectory)/coverage'
-    condition: succeededOrFailed()
-
-  - task: DeleteFiles@1
-    displayName: 'Delete files from $(System.DefaultWorkingDirectory)'
-    inputs:
-      SourceFolder: '$(System.DefaultWorkingDirectory)'
-      Contents: |
-        .git
-        node_modules
-        coverage
-        testResults
-        .gitignore
-
-  - task: ArchiveFiles@2
-    displayName: 'Archive $(Build.BinariesDirectory)'
-    inputs:
-      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-      includeRootFolder: false
-      archiveFile: '$(Build.ArtifactStagingDirectory)/mgt-$(baseVersionNumber).$(Build.BuildId).zip'
-
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: drop'
+  # - task: PublishTestResults@2
+  #   displayName: 'Publish Test Results testResults/junit.xml'
+  #   inputs:
+  #     testResultsFiles: testResults/junit.xml
+  #   condition: succeededOrFailed()
+  # - task: PublishCodeCoverageResults@1
+  #   displayName: 'Publish code coverage from $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
+  #   inputs:
+  #     codeCoverageTool: Cobertura
+  #     summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
+  #     reportDirectory: '$(System.DefaultWorkingDirectory)/coverage'
+  #   condition: succeededOrFailed()
+  # - task: DeleteFiles@1
+  #   displayName: 'Delete files from $(System.DefaultWorkingDirectory)'
+  #   inputs:
+  #     SourceFolder: '$(System.DefaultWorkingDirectory)'
+  #     Contents: |
+  #       .git
+  #       node_modules
+  #       coverage
+  #       testResults
+  #       .gitignore
+  # - task: ArchiveFiles@2
+  #   displayName: 'Archive $(Build.BinariesDirectory)'
+  #   inputs:
+  #     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+  #     includeRootFolder: false
+  #     archiveFile: '$(Build.ArtifactStagingDirectory)/mgt-$(baseVersionNumber).$(Build.BuildId).zip'
+  # - task: PublishBuildArtifacts@1
+  #   displayName: 'Publish Artifact: drop'
