--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,7 @@ jobs:
       - run: npm install -g yarn
       - run: yarn
       - run: yarn build
-      - run: node .\scripts\setVersion.js --next
+      - run: node scripts/setVersion.js --next
       - run: yarn run pack
       - name: Upload a Build Artifact - package
         uses: actions/upload-artifact@v2
