--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,5 +29,6 @@ jobs:
       - run: yarn build
       - run: node scripts/setVersion.js --next
       - run: lerna exec --scope @microsoft/* -- "npm publish --tag next"
+        if: github.repository == 'microsoftgraph/microsoft-graph-toolkit'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
