Added graph client dependency to packages that use it

--- a/packages/providers/mgt-msal-provider/package.json
+++ b/packages/providers/mgt-msal-provider/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
+    "@microsoft/microsoft-graph-client": "^2.2.1",
     "msal": "^1.4.4"
   },
   "publishConfig": {
