--- a/packages/mgt-components/package.json
+++ b/packages/mgt-components/package.json
@@ -37,9 +37,10 @@
     "setLicense": "gulp setLicense --cwd ."
   },
   "dependencies": {
+    "@microsoft/mgt-element": "*",
+    "@microsoft/microsoft-graph-client": "^2.2.1",
     "@microsoft/microsoft-graph-types": "^1.27.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
-    "@microsoft/mgt-element": "*",
     "office-ui-fabric-core": "11.0.0"
   },
   "publishConfig": {
