--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,12 @@
 {
-  "packages": ["packages/*", "packages/providers/*", "samples/react-app", "samples/angular-app", "samples/vue-app"],
+  "packages": [
+    "packages/*",
+    "packages/providers/*",
+    "samples/react-app",
+    "samples/angular-app",
+    "samples/vue-app",
+    "samples/electron-app"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent"
