--- a/samples/electron-app/package.json
+++ b/samples/electron-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-mgt",
+  "name": "electron-app-mgt",
   "version": "1.0.0",
   "description": "A sample Electron application that uses msal-node to acquire tokens",
   "main": "app.ts",
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "webpack": "webpack",
-    "start": "npm run webpack && electron dist/app.js",
+    "start": "npm run build && npm run webpack && electron dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,17 +22,19 @@
     "@babel/preset-env": "^7.12.7",
     "babel": "^6.23.0",
     "electron": "^11.0.2",
+    "electron-rebuild": "^2.3.4",
     "es-dev-server": "^1.57.8",
     "es-module-lexer": "^0.3.26",
     "es-module-shims": "^0.7.1",
+    "node-loader": "^1.0.2",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.0.0-beta.1",
-    "@microsoft/mgt": "^1.3.6",
+    "@microsoft/mgt-components": "*",
+    "@microsoft/mgt-electron-provider": "*",
+    "@microsoft/mgt-element": "*",
     "axios": "^0.21.0"
   }
 }
