--- a/samples/electron-app/tsconfig.json
+++ b/samples/electron-app/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "removeComments": false,
     "outDir": "dist",
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/main/*"]
 }
