--- a/packages/mgt-components/package.json
+++ b/packages/mgt-components/package.json
@@ -33,8 +33,7 @@
     "lint": "tslint -c ../../tslint.json 'src/**/*.ts'",
     "postpack": "cpx *.tgz ../../artifacts",
     "sass": "gulp sass --cwd .",
-    "sass:watch": "gulp watchSass --cwd .",
-    "setLicense": "gulp setLicense --cwd ."
+    "sass:watch": "gulp watchSass --cwd ."
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
