--- a/packages/providers/mgt-electron-provider/package.json
+++ b/packages/providers/mgt-electron-provider/package.json
@@ -21,9 +21,9 @@
   },
   "author": "Microsoft",
   "license": "MIT",
-  "main": "./dist/es6/index.js",
-  "types": "./dist/es6/index.d.ts",
-  "module": "./dist/es6/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
   "files": [
     "dist",
     "src"
@@ -32,7 +32,7 @@
     "build": "npm run clean && npm run build:compile",
     "build:compile": "npm run compile",
     "build:watch": "npm run compile:watch",
-    "clean": "shx rm -rf ./dist && shx rm -rf ./tsconfig.tsbuildinfo",
+    "clean": "shx rm -rf ./dist && shx rm -rf ./tsconfig.authenticator.tsbuildinfo  && shx rm -rf ./tsconfig.provider.tsbuildinfo",
     "compile": "tsc -p ./tsconfig.provider.json && tsc -p ./tsconfig.authenticator.json",
     "compile:watch": "tsc -w -p ./tsconfig.provider.json && tsc -w -p ./tsconfig.authenticator.json",
     "lint": "tslint -c ../../../tslint.json 'src/**/*.ts'",
@@ -40,7 +40,6 @@
     "postpack": "cpx *.tgz ../../../artifacts"
   },
   "dependencies": {
-    "@azure/msal-node-extensions": "^1.0.0-alpha.4",
     "@azure/msal-node": "^1.0.0-beta.1",
     "@microsoft/mgt-element": "*",
     "@microsoft/microsoft-graph-client": "^2.2.1",
