--- a/samples/electron-app/package.json
+++ b/samples/electron-app/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "webpack": "webpack",
-    "start": "npm run build && npm run webpack && electron dist/app.js",
+    "start": "npm run webpack && electron dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
