--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,7 +5,7 @@ name: Build CI
 
 on:
   pull_request:
-    branches: [main, release/**]
+    branches: [main, release/**, next/**]
 
 jobs:
   build:
