--- a/package.json
+++ b/package.json
@@ -49,6 +49,14 @@
     "commitMessage": "Deploy Storybook [skip ci]"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.8",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@fluentui/web-components": "^0.14.2",
     "@storybook/addon-a11y": "^5.3.17",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-docs": "^5.3.17",
@@ -58,19 +66,6 @@
     "@storybook/cli": "^5.3.17",
     "@storybook/storybook-deployer": "^2.8.5",
     "@storybook/web-components": "^5.3.17",
-    "lerna": "^3.22.1",
-    "lit-element": "^2.4.0",
-    "monaco-editor": "^0.19.3",
-    "monaco-editor-webpack-plugin": "^1.8.2",
-    "storybook-addon-web-components-knobs": "^0.2.7",
-    "cpx": "^1.5.0",
-    "@babel/core": "^7.12.8",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^24.9.1",
     "@types/node": "12.12.22",
     "@types/react": "^17.0.00",
@@ -78,7 +73,9 @@
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "babel-loader": "^8.2.1",
     "core-js": "^3.7.0",
+    "cpx": "^1.5.0",
     "es-dev-server": "^2.1.0",
+    "fs-extra": "^9.0.1",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.8",
     "gulp-clean-css": "4.3.0",
@@ -89,16 +86,15 @@
     "husky": "^4.3.0",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
+    "lerna": "^3.22.1",
+    "lit-element": "^2.4.0",
+    "monaco-editor": "^0.19.3",
+    "monaco-editor-webpack-plugin": "^1.8.2",
     "npm-run-all": "^4.1.5",
     "prettier": "1.17.0",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.29.0",
-    "shx": "^0.3.3",
-    "ts-jest": "^24.3.0",
-    "whatwg-fetch": "^3.5.0",
-    "fs-extra": "^9.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "regenerator-runtime": "^0.13.7",
     "rollup": "^2.33.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-babel-minify": "^10.0.0",
@@ -108,10 +104,15 @@
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript": "^1.0.1",
+    "sass": "^1.29.0",
+    "shx": "^0.3.3",
+    "storybook-addon-web-components-knobs": "^0.2.7",
+    "ts-jest": "^24.3.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.5",
     "web-component-analyzer": "^1.1.6",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "whatwg-fetch": "^3.5.0"
   },
   "husky": {
     "hooks": {
