--- a/.github/workflows/next.yml
+++ b/.github/workflows/next.yml
@@ -6,7 +6,9 @@ name: Build CI
 on:
   push:
     branches: [next/*]
-
+    paths:
+      - 'packages/**'
+      
 jobs:
   build:
     runs-on: ubuntu-latest
