--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -33,8 +33,8 @@
   "dependencies": {
     "@microsoft/mgt-components": "*",
     "@microsoft/mgt-element": "*",
-    "@microsoft/microsoft-graph-types": "^1.28.0",
-    "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
+    "@microsoft/microsoft-graph-types": "^1.31.0",
+    "@microsoft/microsoft-graph-types-beta": "^0.1.0-preview",
     "wc-react": "^0.4.0"
   },
   "publishConfig": {
