Updates mgt-spfx to SPFx v1.12

--- a/packages/mgt-spfx/tsconfig.json
+++ b/packages/mgt-spfx/tsconfig.json
@@ -21,9 +21,8 @@
       "../../node_modules/@types",
       "../../node_modules/@microsoft"
     ],
-    "types": ["es6-promise", "webpack-env"],
-    "lib": ["es5", "dom", "es2015.collection"]
+    "types": ["webpack-env"],
+    "lib": ["es5", "dom", "es2015.collection", "es2015.promise"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules", "lib"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
