--- a/packages/mgt-spfx/package.json
+++ b/packages/mgt-spfx/package.json
@@ -28,18 +28,16 @@
     "@microsoft/mgt-components": "*",
     "@microsoft/mgt-element": "*",
     "@microsoft/mgt-sharepoint-provider": "*",
-    "@microsoft/rush-stack-compiler-3.7": "^0.6.37"
+    "@microsoft/sp-core-library": "1.12.0"
   },
   "devDependencies": {
-    "@microsoft/sp-build-web": "1.11.0",
-    "@microsoft/sp-tslint-rules": "1.11.0",
-    "@microsoft/sp-module-interfaces": "1.11.0",
-    "@microsoft/sp-webpart-workbench": "1.11.0",
-    "gulp": "~3.9.1",
-    "@types/chai": "3.4.34",
-    "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2",
+    "@microsoft/rush-stack-compiler-3.7": "0.2.3",
+    "@microsoft/sp-build-web": "1.12.0",
+    "@microsoft/sp-module-interfaces": "1.12.0",
+    "@microsoft/sp-tslint-rules": "1.12.0",
+    "@microsoft/sp-webpart-workbench": "1.12.0",
     "@types/webpack-env": "1.13.1",
-    "@types/es6-promise": "0.0.33"
+    "ajv": "~5.2.2",
+    "gulp": "4.0.2"
   }
 }
