--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "typescript": "^3.7.5",
     "web-component-analyzer": "^1.1.6",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-microsoft-contrib": "^6.2.0"
   },
   "husky": {
     "hooks": {
