Added event on account switch

--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -48,7 +48,8 @@
     "@microsoft/mgt-msal-provider": "*",
     "@microsoft/mgt-teams-provider": "*",
     "@microsoft/mgt-proxy-provider": "*",
-    "@microsoft/mgt-sharepoint-provider": "*"
+    "@microsoft/mgt-sharepoint-provider": "*",
+    "@microsoft/mgt-msal2-provider": "*"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.5.0"
