--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -11,8 +11,9 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/mgt": "^1.3.0",
-    "@microsoft/mgt-react": "^1.3.0-preview.3",
+    "@microsoft/mgt": "^2.2.0-preview.ef9b63b",
+    "@microsoft/mgt-react": "^2.2.0-preview.ef9b63b",
+    "@microsoft/mgt-spfx": "^2.2.0-preview.ef9b63b",
     "@microsoft/sp-core-library": "1.10.0",
     "@microsoft/sp-lodash-subset": "1.10.0",
     "@microsoft/sp-office-ui-fabric-core": "1.10.0",
