--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "1.17.0",
+    "prettier": "2.2.1",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.29.0",
     "shx": "^0.3.3",
@@ -122,6 +122,9 @@
   },
   "prettier": {
     "printWidth": 120,
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "embeddedLanguageFormatting": "off"
   }
 }
