integrated spfx sample with lerna

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "samples/react-app",
     "samples/angular-app",
     "samples/vue-app",
-    "samples/electron-app"
+    "samples/electron-app",
+    "samples/sp-webpart"
   ],
   "scripts": {
     "build": "npm run prettier:check && npm run clean && lerna run build --scope @microsoft/*",
