--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -11,14 +11,13 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/mgt": "^2.2.0-preview.ef9b63b",
-    "@microsoft/mgt-react": "^2.2.0-preview.ef9b63b",
-    "@microsoft/mgt-spfx": "^2.2.0-preview.ef9b63b",
-    "@microsoft/sp-core-library": "1.10.0",
-    "@microsoft/sp-lodash-subset": "1.10.0",
-    "@microsoft/sp-office-ui-fabric-core": "1.10.0",
-    "@microsoft/sp-property-pane": "1.10.0",
-    "@microsoft/sp-webpart-base": "1.10.0",
+    "@microsoft/mgt-react": "*",
+    "@microsoft/mgt-spfx": "*",
+    "@microsoft/sp-core-library": "1.12.1-rc.1",
+    "@microsoft/sp-lodash-subset": "1.12.1-rc.1",
+    "@microsoft/sp-office-ui-fabric-core": "1.12.1-rc.1",
+    "@microsoft/sp-property-pane": "1.12.1-rc.1",
+    "@microsoft/sp-webpart-base": "1.12.1-rc.1",
     "@types/es6-promise": "0.0.33",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
@@ -34,15 +33,15 @@
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@microsoft/rush-stack-compiler-3.7": "0.2.9",
-    "@microsoft/sp-build-web": "1.10.0",
-    "@microsoft/sp-module-interfaces": "1.10.0",
-    "@microsoft/sp-tslint-rules": "1.10.0",
-    "@microsoft/sp-webpart-workbench": "1.10.0",
+    "@microsoft/sp-build-web": "1.12.1-rc.1",
+    "@microsoft/sp-module-interfaces": "1.12.1-rc.1",
+    "@microsoft/sp-tslint-rules": "1.12.1-rc.1",
+    "@microsoft/sp-webpart-workbench": "1.12.1-rc.1",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
     "babel-loader": "^8.1.0",
-    "gulp": "~3.9.1",
+    "gulp": "4.0.2",
     "regenerator-runtime": "^0.13.5",
     "typescript": "^3.4.3",
     "webpack": "^4.43.0"
