--- a/packages/mgt-components/package.json
+++ b/packages/mgt-components/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
-    "@microsoft/microsoft-graph-client": "^2.2.1",
+    "@microsoft/microsoft-graph-client": "^3.0.0-Preview.1",
     "@microsoft/microsoft-graph-types": "^1.36.0",
     "@microsoft/microsoft-graph-types-beta": "^0.4.0-preview",
     "office-ui-fabric-core": "11.0.0"
