msal2 multi-account UI (#1041)
* Added electron app

* delete

* Added electron sample folder

* Added electron sample folder

* Added electron sample folder

* added electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Update README.md

* Added license

* Cleaned up license

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update samples/electron-app/package.json

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Review comments & removed cache plugin

* Update packages/providers/mgt-electron-provider/src/Authenticator/CustomFileProtocol.ts

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Changed initialization of ElectronAuthenticator

* updated sample readme

* Update README.md

* Removed all evidence of incremental consent support :P

* Warning

* MSAL2.0

* msal2 silent

* Added msal2 custom element and sso

* SSO fix

* Added event on account switch

* Fixed issue with setActiveAccount related to latest msal-browser package

* Bumped up package version

* temp fix

* Single account

* Added new test file

* Update msal2-provider-test.html

* Single account changes

* Comments

* Added msal2.0 provider to index.html

* Added msal2.0 provider to index.html

* enabled multi account

* handle account changes in providers namespace

* Comments

* Revert "enabled multi account"

This reverts commit 7f945280a5ea193575e40859b3c09b4cac06608d.

* fixed binding issue

* cleanup

* fixed when unsubscr

--- a/packages/mgt-components/package.json
+++ b/packages/mgt-components/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@microsoft/mgt-element": "*",
     "@microsoft/microsoft-graph-client": "^2.2.1",
+    "@fluentui/web-components": "^0.19.1",
     "@microsoft/microsoft-graph-types": "^1.36.0",
     "@microsoft/microsoft-graph-types-beta": "^0.4.0-preview",
     "office-ui-fabric-core": "11.0.0"
