--- a/packages/mgt-components/package.json
+++ b/packages/mgt-components/package.json
@@ -40,7 +40,8 @@
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "@microsoft/microsoft-graph-types": "^1.31.0",
     "@microsoft/microsoft-graph-types-beta": "^0.1.0-preview",
-    "office-ui-fabric-core": "11.0.0"
+    "office-ui-fabric-core": "11.0.0",
+    "validator": "^13.6.0"
   },
   "publishConfig": {
     "directory": "dist"
