Format index.html, revert msalprovider, suggestest changes in package.json and readme

--- a/packages/providers/mgt-teams-sso-provider/package.json
+++ b/packages/providers/mgt-teams-sso-provider/package.json
@@ -11,7 +11,8 @@
     "msal",
     "msal 2.0",
     "auth",
-    "authentication"
+    "authentication",
+    "sso"
   ],
   "homepage": "https://github.com/microsoftgraph/microsoft-graph-toolkit",
   "bugs": {
