--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "fs-extra": "^9.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "rollup": "^2.33.3",
+    "rollup": "2.46.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
