--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          BRANCH: gh-pages
-          FOLDER: storybook-static
-          TARGET_FOLDER: next
-          CLEAN: false
+          branch: gh-pages
+          folder: storybook-static
+          target-folder: next
+          clean: false
         if: github.repository == 'microsoftgraph/microsoft-graph-toolkit'
