--- a/.github/workflows/push-release.yml
+++ b/.github/workflows/push-release.yml
@@ -5,7 +5,7 @@ name: Build CI
 
 on:
   push:
-    branches: [release/latest, nmetulev/storybook-next]
+    branches: [release/latest]
 
 jobs:
   version:
