--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
     "web-component-analyzer": "^1.1.6",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-microsoft-contrib": "^6.2.0"
+    "tslint-microsoft-contrib": "^6.2.0",
+    "@octokit/rest": "^18.5.3"
   },
   "husky": {
     "hooks": {
